update swagger usage
